# University-Projects

./: .gitignore  README.md
ASD/: E.cpp  G.cpp
ASD (Algorhytms and Data Structures)/: C.cpp  compile.sh
AWWW/: projekt.html  style.css
BSK/: create.js
BSK (Cybersecurity)/: script.js  xss.js  xss2.js
BSK (Cybersecurity)/for_students/: utils.py
BSK (Cybersecurity)/pliki dla studentów/: zad1  zad2.c  zad2_shellcode.asm
BSK (Cybersecurity)/zadpwn/: bsk-pwn-for-students.tgz  input.in  solve.py
BSK/for_students/: server.py  utils.py
BSK/pliki dla studentów/: zad1.py
BSK/pwn/: zad1-solve.py
BSK/zadpwn/: .gdb_history  gadgets.txt
Graphics in Windows/jnp3-direct3d/: DwaPokojeD3D12.vcxproj  DwaPokojeD3D12.vcxproj.filters  README.md  window.xcf
Graphics in Windows/space-shooter/: README.md  Space shooter.sln
JNP (Programming Languages ​​and Tools)/JNP1-zadanie5/: compile.sh  concept.txt  kvfifo  kvfifo.h  kvfifo_example.cc
JPP (Programming languages ​​and paradigms)/: Graph.hs  Set.hi  Set.hs  TestSet.hs  lab00.hs  lab02.hs  lab03.hs  lab07.hs  parseErrorSzkielet.hs
PW (Concurrent Programming)/: README.md
PW (Concurrent Programming)/lab14/: CMakeLists.txt  dekker.cpp  peterson.cpp
Python Course/: Kurs Pythona - programowaie obiektowe std.ipynb  README.md  Zajecia_11s.ipynb  dane.txt  index.html  ludnosc.csv  output.tex  podziekowania.py  podziekowania.tex  z14.ipynb  zad11_1.ipynb  zad_14.py  zajecia_10(1).ipynb  zajecia_10.ipynb  zajecia_12-numpy.ipynb
SiK/: sender.sh
SiK (Computer Networks)/: receiver.sh  thread_server.c
jpp/: TestSet.hi
(+234 files in other folders)
